# cphr

./: LICENSE  README.md  pyproject.toml
cphr/: __init__.py  __main__.py  caesar.py  freq.py  maptools.py
tests/manual/: c1.a.py  c1.b.py  c2.a.py
