[project]
name = "cphr"
dynamic = ["version"]
requires-python = ">= 3.13"
authors = [
  {name = "BigPotatoPizzaHey"}
]
description = "Cipher tools for the national cipher challenge"
readme = "README.md"
license = "MIT"

keywords = ["cipher", "cryptography"]
dependencies = [
]

[project.scripts]
cphr = "cphr.__main__:main"

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/CEVIGS/cphr"
Issues = "https://github.com/CEVIGS/cphr/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cphr/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["cphr"]
